# GitConsistency

./: .env.example  .gitignore  .pre-commit-config.yaml  .tmp-report.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: consistency.yml
.postman/: resources.yaml
.specify/features/001-gitconsistency-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/features/001-gitconsistency-spec/checklists/: requirements.md
.specify/memory/: constitution.md
.streamlit/: config.toml
consistancy/: __init__.py  config.py  github_integration.py  main.py
consistancy/core/: __init__.py  cache.py  gitnexus_client.py  schema.py
consistancy/dashboard/: __init__.py  app.py  components.py  config.py  data_manager.py
consistancy/report/: __init__.py  generator.py  templates.py
consistancy/reviewer/: __init__.py  ai_reviewer.py  models.py  prompts.py
consistancy/scanners/: __init__.py  drift_detector.py  hotspot_analyzer.py  orchestrator.py  security_scanner.py
consistency/: __init__.py  __main__.py  config.py  exceptions.py  github_integration.py  main.py
consistency/agents/: __init__.py  base.py  logic_agent.py  security_agent.py  style_agent.py  supervisor.py  synthesis_agent.py
consistency/cli/: __init__.py  banner.py  main.py  utils.py
consistency/cli/commands/: analyze.py  ci.py  config_cmd.py  init.py  review.py  scan.py
consistency/commands/: __init__.py  analyze.py  ci.py  config_cmd.py  init.py  review.py  scan.py
consistency/core/: __init__.py  cache.py  gitnexus_client.py  metrics.py  schema.py  self_hosted.py
consistency/github/: __init__.py  checks.py  ci_utils.py  client.py  comments.py  labels.py  utils.py
consistency/llm/: __init__.py  base.py  factory.py
consistency/llm/providers/: __init__.py  litellm.py
consistency/report/: __init__.py  generator.py  llm_generator.py  templates.py
consistency/report/formatters/: __init__.py  base.py  html.py  json.py  markdown.py  sarif.py
consistency/reviewer/: __init__.py  ai_reviewer.py  context_enhancer.py  disk_cache.py  models.py  prompts.py  strict_prompts.py
consistency/scanners/: __init__.py  base.py  orchestrator.py  security_scanner.py
consistency/tools/: __init__.py  diff_tools.py  gitnexus_tools.py  security_tools.py
docs/: GITHUB_SETUP.md  GITNEXUS_INTEGRATION.md  README.md  report.md  se-report-2024-03-24.md  vibe-coding.md
examples/: quickstart.md
examples/sample-project/: README.md  main.py
scripts/: generate_test_reports.py
tests/: __init__.py
tests/e2e/: __init__.py  test_full_workflow.py
tests/fixtures/: security_test_sample.py  test_sarif.json
tests/integration/: __init__.py  test_agent_workflow.py  test_cli_commands.py  test_cli_workflow.py  test_config_integration.py  test_gitnexus_integration.py  test_llm_provider_integration.py  test_report_formatters.py
tests/unit/: test_ai_reviewer.py  test_analyze.py  test_cache.py  test_ci_utils.py  test_cli_ci.py  test_cli_config.py  test_cli_review.py  test_cli_scan.py  test_cli_utils.py  test_config.py  test_dashboard_components.py  test_dashboard_config.py  test_data_manager.py  test_diff_tools.py  test_disk_cache.py  test_drift_detector.py  test_exceptions.py  test_formatters_base.py  test_github_integration.py  test_github_labels.py  test_gitnexus_client.py  test_hotspot_analyzer.py  test_init.py  test_main.py  test_metrics.py  test_orchestrator.py  test_prompts.py  test_report_generator.py  test_reviewer_models.py  test_security_scanner.py  test_security_tools.py
