[project]
name = "git-consistency"
version = "0.1.0"
description = "代码安全扫描与 AI 审查工具 - 集成 Semgrep、Bandit 和 LLM"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sk1ua", email = "sakuaikacn@gmail.com" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["code-quality", "security", "static-analysis", "ai-review", "github-actions"]

dependencies = [
    # CLI & 核心
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # 异步 & 缓存
    "aiohttp>=3.9.0",
    "cachetools>=5.3.0",
    
    # 工具
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# 安全扫描
security = [
    "setuptools>=69.0.0",  # 提供 pkg_resources，semgrep 依赖
    "semgrep>=1.52.0",
    "bandit[toml]>=1.7.6",
]

# AI 审查
ai = [
    "litellm>=1.35.0",
]

# GitHub 集成
github = [
    "pygithub>=2.1.1",
]

# 完整功能
full = [
    "semgrep>=1.52.0",
    "bandit[toml]>=1.7.6",
    "litellm>=1.35.0",
    "pygithub>=2.1.1",
]

dev = [
    # 代码质量
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    
    # 测试
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "respx>=0.20.2",
    "faker>=20.1.0",
    
    # 类型 stubs
    "types-requests>=2.31.0",
]

[project.scripts]
gitconsistency = "consistency.cli.main:app"
gccy = "consistency.cli.main:app"
ccy = "consistency.cli.main:app"  # 向后兼容

[project.urls]
Homepage = "https://github.com/sk1ua/GitConsistency"
Repository = "https://github.com/sk1ua/GitConsistency"
Issues = "https://github.com/sk1ua/GitConsistency/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consistency"]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate
    "PL",  # pylint
    "PERF",# perflint
    "RUF", # Ruff-specific rules
]
ignore = ["D100", "D104", "D107", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["consistency"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.radon]
cc_min = "B"
show_complexity = true
show_mi = true
